manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-ml-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-ml-service
  template:
    metadata:
      labels:
        app: my-ml-service
    spec:
      containers:
      - name: my-ml-service
        image: airat1963/my-ml-service:latest
        ports:
        - containerPort: 8000
