manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-ml-service
spec:
  selector:
    app: my-ml-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
